--- a/templates/base.html
+++ b/templates/base.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport"
-        content="width=device-width, initial-scale=1, shrink-to-fit=no">
+          content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet"
-href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+          href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <title>Orders</title>
 </head>
 <body>
@@ -20,6 +20,14 @@ href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
                     <a href="/orders/password-change">
                         Change password
                     </a>
+                    {% if user.is_staff %}
+                        | <a href="/orders/admin">Admin panel</a>
+                    {% endif %}
+                    {% if user.email == '' %}
+                        | <a href="/orders/subscribe">Subscribe</a>
+                    {% else %}
+                        | <a href="/orders/unsubscribe">Unsubscribe</a>
+                    {% endif %}
                 </p>
             {% else %}
                 <p class="text-right">
@@ -27,6 +35,7 @@ href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
                     <a href="/orders/register">Register</a>
                 </p>
             {% endif %}
+
             <hr class="mt-0 mb-4">
             <div class="card">
                 <div class="card-body">
